feat: admin panel (#80)
* basic admin panel

* feat: admins can delete reviews

* feat: admins can delete users

* fix: made users file more descriptive

* feat: admin panel complete
